// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/Home/GuidanceButton should match snapshot 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
    type="button"
  />
</div>
`;

exports[`test base/Home/GuidanceButton should render children 1`] = `
<div>
  <button
    class="ant-btn ant-btn-default ant-btn-sm guidance-button-wrapper css-1jtuni2"
    type="button"
  >
    <div
      class="ant-space ant-space-horizontal ant-space-align-center"
    >
      <div
        class="ant-space-item"
      >
        children
      </div>
    </div>
  </button>
</div>
`;
